@@ -9,6 +9,8 @@
 #include <vpr/Perf/ProfileManager.h>      // Get all the profile stuff
 #include <vpr/System.h>
 
+#include <boost/concept_check.hpp>
+
 
 namespace vprTest
 {
@@ -41,7 +43,7 @@ void PerfTest::testConstructTree()
    CPPUNIT_ASSERT(first_one_node->getParent() == first_node);
 
    std::cout << "Printing tree:\n" << std::flush;
-   root_node->printTree();
+   root_node->printTree(false);
 
    std::string xml_rep = root_node->getXMLRep();
    std::cout << "\nPrinting xml tree:\n" << xml_rep;
@@ -60,6 +62,52 @@ void PerfTest::testNamedLookupSample()
 void PerfTest::testReset()
 {
    //CPPUNIT_ASSERT(false);
+}
+
+void PerfTest::testMultithreading()
+{
+   const int num_threads(3);
+   std::vector<vpr::ThreadMemberFunctor<PerfTest>*> functors(num_threads);
+   std::vector<vpr::Thread*> threads(num_threads);
+
+   for(int t=0;t<num_threads;t++)
+   {
+      vpr::ProfileManager::startProfile("StartThread");
+      functors[t] = new vpr::ThreadMemberFunctor<PerfTest>(this,&PerfTest::createSamples);
+      threads[t] = new vpr::Thread(functors[t]);   // Spawns thread here.
+      vpr::ProfileManager::stopProfile();
+   }
+
+   for(int t=0;t<num_threads;t++)
+   {
+      threads[t]->join();
+      delete threads[t];
+      delete functors[t];
+   }
+
+   std::cout << "---- Multi-threaded tree ----" << std::endl;
+   vpr::ProfileManager::printTree(true);
+   std::cout << std::endl;
+}
+
+// used for spawned thread.  Just create some samples and exit
+void PerfTest::createSamples(void* arg)
+{
+   boost::ignore_unused_variable_warning(arg);
+
+   vpr::ProfileManager::startProfile("One");
+      vpr::ProfileManager::startProfile("One-1");
+      vpr::ProfileManager::stopProfile();
+      vpr::ProfileManager::startProfile("One-2");
+      vpr::ProfileManager::stopProfile();
+   vpr::ProfileManager::stopProfile();
+   vpr::ProfileManager::startProfile("Two");
+   vpr::ProfileManager::stopProfile();
+
+   mOutputLock.acquire();
+   std::cout << "-- output stats from thread: " << (void*)vpr::Thread::self() << " --\n";
+   vpr::ProfileManager::printTree(false);
+   mOutputLock.release();
 }
 
 // ------------------ Perf Metric --------------------- //
